--- a/app/src/main/res/drawable/layout_round_corner_filled.xml
+++ b/app/src/main/res/drawable/layout_round_corner_filled.xml
@@ -3,11 +3,6 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="2dp"
-        android:color="@color/purple_500" />
-    <corners android:radius="10dp" />
-    <padding
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp" />
+        android:color="@color/grey_100" />
+    <corners android:radius="4dp" />
 </shape>
