--- a/app/src/main/res/layout/fragment_day_wise_info.xml
+++ b/app/src/main/res/layout/fragment_day_wise_info.xml
@@ -13,6 +13,7 @@
         tools:context=".calendarviews.weekview.DayWiseInfoFragment">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_tasks"
             android:layout_width="0dp"
             android:layout_height="0dp"
             tools:listitem="@layout/item_daily_task"
