--- a/app/src/main/res/layout/item_calendar_horizontal.xml
+++ b/app/src/main/res/layout/item_calendar_horizontal.xml
@@ -1,27 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="50dp"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical">
+    >
+
+  <data>
+
+  </data>
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="50dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="2dp"
+      android:layout_marginTop="10dp"
+      android:gravity="center"
+      android:orientation="vertical"
+      >
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textCalenderItemHorizontalDay"
+        android:id="@+id/tv_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@color/black"
-        tools:text="Mon" />
+        android:textColor="@color/grey_100"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Mon"
+        />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/textCalenderItemHorizontalDate"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:id="@+id/tv_date"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:background="@drawable/layout_round_corner_filled"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        tools:text="23" />
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_day"
+        tools:text="23"
+        />
 
-</LinearLayout>
+    <View
+        android:id="@+id/dot_1"
+        android:layout_width="4dp"
+        android:layout_height="4dp"
+        android:background="@drawable/layout_dot"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/dot_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_day"
+        app:layout_constraintVertical_bias="0.90"
+        />
+    <View
+        android:id="@+id/dot_2"
+        android:layout_width="4dp"
+        android:layout_height="4dp"
+        android:background="@drawable/layout_dot"
+        android:backgroundTint="@color/light_green_400"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_date"
+        app:layout_constraintEnd_toStartOf="@+id/dot_3"
+        app:layout_constraintStart_toEndOf="@+id/dot_1"
+        app:layout_constraintTop_toBottomOf="@+id/tv_day"
+        app:layout_constraintVertical_bias="0.90"
+        />
+    <View
+        android:id="@+id/dot_3"
+        android:layout_width="4dp"
+        android:layout_height="4dp"
+        android:background="@drawable/layout_dot"
+        android:backgroundTint="@color/blue_500"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/dot_2"
+        app:layout_constraintTop_toBottomOf="@+id/tv_day"
+        app:layout_constraintVertical_bias="0.90"
+        />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
