--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="grey_100">#cfd8dc</color>
+  <color name="maroon_500">#ab3451</color>
+  <color name="blue_500">#0987fb</color>
+  <color name="light_green_400">#67ab23</color>
 </resources>
